# SyncGitlab2MSProject

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.md  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  requirements.txt
mocking/: README.md
mocking/pywintypes/: __init__.py
mocking/win32com/client/: __init__.py
mocking/win32com/universal/: __init__.py
src/syncgitlab2msproject/: __init__.py  argparse_actions.py  cli.py  custom_types.py  decorators.py  exceptions.py  funcions.py  functions.py  gitlab.py  gitlab_issues.py  helper_classes.py  ms_project.py  skeleton.py  sync.py  typing.py
tests/: Project1.mpp  conftest.py  test_msproject.py  test_skeleton.py
